tests/function_to_indexed/function_to_indexed.exp
Error ------------------------------------------------------------------------------------------------- recursive.js:8:2

Cannot cast function to `Value` because: [incompatible-cast]
 - Either function [1] is incompatible with indexed `Aggregate` [2].
 - Or function [1] is incompatible with boolean [3].

   recursive.js:8:2
   8| (() => {}) as Value;
       ^^^^^^^^ [1]

References:
   recursive.js:2:63
   2| export type Value = void | null | boolean | number | string | Aggregate;
                                                                    ^^^^^^^^^ [2]
   recursive.js:2:35
   2| export type Value = void | null | boolean | number | string | Aggregate;
                                        ^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------------ test.js:4:1

Cannot cast `f` to object type because function [1] is incompatible with indexed object type [2].
[incompatible-function-indexer]

   test.js:4:1
   4| f as {[string]: string};
      ^

References:
   test.js:3:1
   3| function f() {}
      ^^^^^^^^^^^^ [1]
   test.js:4:6
   4| f as {[string]: string};
           ^^^^^^^^^^^^^^^^^^ [2]



Found 2 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
